DevTools: [Console] fix console message stack wrapping
The patch changes console message stack layout so that it wraps around
link entry.

BUG=404458
R=pfeldman

Review URL: https://codereview.chromium.org/486723003

git-svn-id: svn://svn.chromium.org/blink/trunk@180833 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspectorStyle.css
+++ b/front_end/inspectorStyle.css
@@ -922,10 +922,6 @@ body.platform-linux .source-code {
     margin-left: -18px;
 }
 
-.console-message-text {
-    white-space: pre-wrap;
-}
-
 .console-async-trace-text {
     margin-left: -10px;
     font-style: italic;
@@ -1343,6 +1339,10 @@ iframe.panel.extension {
     font-family: monospace;
     font-size: 11px !important;
     white-space: pre-wrap;
+}
+
+.console-message-text {
+    white-space: pre;
 }
 
 .outline-disclosure li {
